1. Fixed call dialog z-index 2. Added hovre scale on Help center button

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -191,7 +191,7 @@
 	transition: all 0.3s;
 	overflow-y: hidden;
 	background: rgb(251, 254, 255);
-	z-index: 1006;
+	z-index: 1005;
 
 	.help-center-unsubscribe {
 		position: absolute;
