--- a/src/app/shared/shared-components/help-center/help-center.component.scss
+++ b/src/app/shared/shared-components/help-center/help-center.component.scss
@@ -18,6 +18,10 @@
 	cursor: pointer;
 	transition: transform 167ms cubic-bezier(0.33, 0, 0, 1);
 	box-sizing: content-box;
+	&:hover {
+		transform: scale(1.1);
+		transition: all 0.3s;
+	}
 	&.clicked,
 	// &:hover,
 	&:active {
